--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -21,7 +21,8 @@
 
     <!--Style css-->
     <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/style.css">
-
+    <link rel="stylesheet" href="/assets/css/users.css">
+    
     <!--Media Query -->
     <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
 
