chore: code formatting

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,18 +1,30 @@
 
 
   <!--Jquery JS-->
-  <script src="/libs/jquery-3.3.1.min.js"></script>
+  <!-- <script src="/libs/jquery-3.3.1.min.js"></script> -->
 
 
   <!--Bootstrap JS-->
-  <script src="/libs/bootstrap.min.js"></script>
+  <!-- <script src="/libs/bootstrap.min.js"></script> -->
 
   <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="/libs/mdb.min.js"></script>
+  <!-- <script type="text/javascript" src="/libs/mdb.min.js"></script> -->
 
 
   <!--Popper JS-->
-  <script src="/libs/popper.min.js"></script>
+  <!-- <script src="/libs/popper.min.js"></script> -->
+
+  <!-- JQuery -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
 
   <!--Custom JS -->
   <script src="/assets/js/custom.js"></script>
