--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,35 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>E-Complaints | इलेक्ट्रोनिक उजुरी</title>
 
     <!--Normalise CSS-->
-    <link rel="stylesheet" type="text/css" href="/libs/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/libs/normalize.css" />
 
     <!-- Font awesome 5.9-->
-    <link rel="stylesheet" href="/libs/fontawesome/css/all.css">
+    <!-- <link rel="stylesheet" href="/libs/fontawesome/css/all.css" /> -->
 
     <!--Bootstrap-->
-    <link rel="stylesheet" href="/libs/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="/libs/bootstrap.min.css"> -->
 
     <!--Material Design for Bootstrap -->
-    <link rel="stylesheet" href="/libs/mdb.min.css">
+    <!-- <link rel="stylesheet" href="/libs/mdb.min.css"> -->
+
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    />
+
+    <!-- Google Fonts -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+
+    <!-- Bootstrap core CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Material Design Bootstrap -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css"
+      rel="stylesheet"
+    />
 
     <!--Style css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/users.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="/assets/css/style.css"
+    />
     
+    <link rel="stylesheet" href="/assets/css/users.css" />
+
     <!--Media Query -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css" />
+  </head>
 
-
-</head>
-
-<body>
-
-
+  <body>
     <div class="loader"></div>
+  </body>
+</html>
