feat: add github cover

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,15 +9,6 @@
     <!--Normalise CSS-->
     <link rel="stylesheet" type="text/css" href="/libs/normalize.css" />
 
-    <!-- Font awesome 5.9-->
-    <!-- <link rel="stylesheet" href="/libs/fontawesome/css/all.css" /> -->
-
-    <!--Bootstrap-->
-    <!-- <link rel="stylesheet" href="/libs/bootstrap.min.css"> -->
-
-    <!--Material Design for Bootstrap -->
-    <!-- <link rel="stylesheet" href="/libs/mdb.min.css"> -->
-
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -25,10 +16,7 @@
     />
 
     <!-- Google Fonts -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Hind&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link
